--- a/src/main/webapp/leakDetection.xhtml
+++ b/src/main/webapp/leakDetection.xhtml
@@ -316,10 +316,10 @@
 
                     <div style="overflow: auto; height: 100%; margin-left: .5rem; width: calc(100% - .5rem)">
                         <h:panelGroup style="height: 27px; width: 100%; text-align: start;" id="struct">
-                            <h:outputText value="#{leakDetectionMB.struct}" style="line-height: 27px;"/>
+                            <h:outputText value="#{leakDetectionMB.struct}" style="line-height: 30px; font-size: 20px; font-weight: 700;"/>
                         </h:panelGroup>
 
-                        <h:panelGroup style="height: calc(100% - 27px); overflow: auto;" id="tableField" layout="block" >
+                        <h:panelGroup style="height: calc(100% - 30px); overflow: auto;" id="tableField" layout="block" >
 
                             <h:outputText value="Выберите объект для отображения архива значений" rendered="#{leakDetectionMB.noObjSelected}"
                             style="display: flex; justify-content: center; align-items: center; font-size: 1.5rem; color: red; height: 85%;
@@ -330,19 +330,19 @@
                                          rowKey="#{coolantData.filial}" rendered="#{leakDetectionMB.alg eq 'coolant' and !leakDetectionMB.noObjSelected}" paginator="true" rows="300"
                                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                          currentPageReportTemplate="{startRecord}-{endRecord} из {totalRecords}"
-                                         rowsPerPageTemplate="150,300,750" paginatorPosition="bottom"
+                                         rowsPerPageTemplate="150,300,750" paginatorPosition="bottom" styleClass="tableFont"
                                          stickyHeader="true" stickyTopAt="#struct">
 
-                                <p:column style="text-align: center; width: 79px" headerText="Филиал" styleClass="#{coolantData.color}" >
+                                <p:column style="text-align: center; width: 79px" headerText="Филиал" styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.filial}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 95px" headerText="Предприятие" styleClass="#{coolantData.color}">
+                                <p:column style="text-align: center; width: 105px" headerText="Предприятие" styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.pred}"/>
                                 </p:column>
                                 <p:column style="text-align: center; width: 105px" headerText="ЦТП" styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.chp}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 64px" headerText="Тип алгоритма" styleClass="#{coolantData.color}">
+                                <p:column style="text-align: center; width: 74px" headerText="Тип алгоритма" styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.algoritm}"/>
                                 </p:column>
                                 <p:column style="text-align: center; width: 5%" headerText="Дата" styleClass="#{coolantData.color}">
@@ -372,10 +372,10 @@
                                 <p:column style="text-align: center; width: 5%" headerText="Vп, м3⁄сут." styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.gp}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 5%" headerText="Vср, м3⁄сут." styleClass="#{coolantData.color}">
+                                <p:column style="text-align: center; width: 4.8%" headerText="Vср, м3⁄сут." styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.gsr}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 5%" headerText="ΔV, м3⁄сут." styleClass="#{coolantData.color}">
+                                <p:column style="text-align: center; width: 4.8%" headerText="ΔV, м3⁄сут." styleClass="#{coolantData.color}">
                                     <h:outputText value="#{coolantData.dg}"/>
                                 </p:column>
                                 <p:column style="text-align: center; width: 120px" headerText="Эффект по теплоносителю, тыс.руб." styleClass="#{coolantData.color}">
@@ -391,16 +391,16 @@
                                 <f:facet name="footer">
                                     <p:dataTable id="coolantTotalTablel1" var="coolantTotalData" widgetVar="coolantTotalTable1" value="#{leakDetectionMB.total}"
                                                  style="table-layout: fixed; width: 100%;" >
-                                        <p:column style="text-align: start; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: start; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.filial}"/>
                                         </p:column>
-                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.coolant_eff}"/>
                                         </p:column>
-                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.heat_eff}"/>
                                         </p:column>
-                                        <p:column style="text-align: center; width: 137px; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: center; width: 137px; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.sum_eff}"/>
                                         </p:column>
                                     </p:dataTable>
@@ -413,30 +413,30 @@
                                          rowKey="#{coolantData.filial}" rendered="#{leakDetectionMB.alg eq 'gvs' and !leakDetectionMB.noObjSelected}" paginator="true" rows="300"
                                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                          currentPageReportTemplate="{startRecord}-{endRecord} из {totalRecords}"
-                                         rowsPerPageTemplate="150,300,750" paginatorPosition="bottom" >
+                                         rowsPerPageTemplate="150,300,750" paginatorPosition="bottom" styleClass="tableFont">
 
                                 <p:column style="text-align: center; width: 79px" headerText="Филиал" styleClass="#{gvsData.color}" >
                                     <h:outputText value="#{gvsData.filial}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 95px" headerText="Предприятие" styleClass="#{gvsData.color}">
+                                <p:column style="text-align: center; width: 105px" headerText="Предприятие" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.pred}"/>
                                 </p:column>
                                 <p:column style="text-align: center; width: 105px" headerText="ЦТП" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.chp}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 64px" headerText="Тип алгоритма" styleClass="#{gvsData.color}">
+                                <p:column style="text-align: center; width: 73px" headerText="Тип алгоритма" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.algoritm}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 5%" headerText="Дата" styleClass="#{gvsData.color}">
+                                <p:column style="text-align: center; width: 4.3%" headerText="Дата" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.date}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 5%" headerText="Тхв, ℃" styleClass="#{gvsData.color}">
+                                <p:column style="text-align: center; width: 4.4%" headerText="Тхв, ℃" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.thv}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 5%" headerText="Т7, ℃" styleClass="#{gvsData.color}">
+                                <p:column style="text-align: center; width: 4.4%" headerText="Т7, ℃" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.t7}"/>
                                 </p:column>
-                                <p:column style="text-align: center; width: 5%" headerText="Vхвнагвф, м3⁄сут" styleClass="#{gvsData.color}">
+                                <p:column style="text-align: center; width: 5.4%" headerText="Vхвнагвcф, м3⁄сут" styleClass="#{gvsData.color}">
                                     <h:outputText value="#{gvsData.ghvnagvsf}"/>
                                 </p:column>
                                 <p:column style="text-align: center; width: 5%" headerText="V7ф, м3⁄сут" styleClass="#{gvsData.color}">
@@ -476,16 +476,16 @@
                                 <f:facet name="footer">
                                     <p:dataTable id="coolantTotalTablel2" var="coolantTotalData" widgetVar="coolantTotalTable1" value="#{leakDetectionMB.total}"
                                                  style="table-layout: fixed; width: 100%;" >
-                                        <p:column style="text-align: start; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: start; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.filial}"/>
                                         </p:column>
-                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.coolant_eff}"/>
                                         </p:column>
-                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: center; width: 120px; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.heat_eff}"/>
                                         </p:column>
-                                        <p:column style="text-align: center; width: 137px; border-width: 1px; background-color: green; border-color: black; color: black;" >
+                                        <p:column style="text-align: center; width: 137px; border-width: 1px; background-color: #BDF8AE; border-color: black; color: black;" >
                                             <h:outputText value="#{coolantTotalData.sum_eff}"/>
                                         </p:column>
                                     </p:dataTable>
@@ -510,13 +510,13 @@
 
         <p:dataTable id="archiveReportTable" var="archiveReportTable" widgetVar="archiveReportTable" value="#{leakDetectionMB.reportList}"
                      style="overflow-wrap: break-word; border-color: black; table-layout: fixed;">
-            <p:column style="height: 25px" headerText="Тип алгоритма">
+            <p:column style="height: 25px; border-color: #f4f4f4" headerText="Тип алгоритма">
                 <h:outputText value="#{archiveReportTable.repType}"/>
             </p:column>
-            <p:column width="100" style="text-align: center; height: 25px" headerText="Дата">
+            <p:column width="100" style="text-align: center; height: 25px; border-color: #f4f4f4" headerText="Дата">
                 <h:outputText value="#{archiveReportTable.repDate}"/>
             </p:column>
-            <p:column width="50">
+            <p:column width="50" style="border-color: #f4f4f4">
                 <div onclick="window.open('#{archiveReportTable.redirect}')" style="display: flex; width: 25px; height: 25px;
                          justify-content: center; margin-left: 10px; align-items: center;" class="customSave">
                     <i class="fa fa-save"/>
